==> carl-tud/RIOT-Pull-Requests/cpu/stm32/periph/spi.c <==
#include <assert.h>
#include "compiler_hints.h"
#include "mutex.h"
#include "periph/gpio.h"
#include "periph/spi.h"
#include "pm_layered.h"
#define ENABLE_DEBUG        0
#include "debug.h"
#define BR_SHIFT            (3U)
#define BR_MAX              (7U)
#define SPI_CR2_SETTINGS    (SPI_CR2_FRXTH |\
                             SPI_CR2_DS_0 |\
                             SPI_CR2_DS_1 |\
                             SPI_CR2_DS_2)
#define SPI_CR2_SETTINGS    0

void spi_init(spi_t bus) {
    assume(bus < SPI_NUMOF);

    // initialize device lock (as locked, spi_init_pins() will unlock it
    locks[bus] = (mutex_t)MUTEX_INIT_LOCKED;
    // trigger pin initialization
    spi_init_pins(bus);

    periph_clk_en(spi_config[bus].apbbus, spi_config[bus].rccmask);
    // reset configuration
    dev(bus)->CR1 = 0;
#if defined(SPI_I2SCFGR_I2SE) || defined(CPU_FAM_STM32H7)
    dev(bus)->I2SCFGR = 0;
#endif
    dev(bus)->CR2 = SPI_CR2_SETTINGS;
    periph_clk_dis(spi_config[bus].apbbus, spi_config[bus].rccmask);
}

void spi_init_pins(spi_t bus) {
    assume(bus < SPI_NUMOF);
#ifdef CPU_FAM_STM32F1

    if (gpio_is_valid(spi_config[bus].sclk_pin)) {
        gpio_init_af(spi_config[bus].sclk_pin, GPIO_AF_OUT_PP);
    }

    if (gpio_is_valid(spi_config[bus].mosi_pin)) {
        gpio_init_af(spi_config[bus].mosi_pin, GPIO_AF_OUT_PP);
    }

    if (gpio_is_valid(spi_config[bus].miso_pin)) {
        gpio_init(spi_config[bus].miso_pin, GPIO_IN);
    }
#else
    if (gpio_is_valid(spi_config[bus].mosi_pin)) {
        gpio_init(spi_config[bus].mosi_pin, GPIO_OUT);
        gpio_init_af(spi_config[bus].mosi_pin, spi_config[bus].mosi_af);
    }

    if (gpio_is_valid(spi_config[bus].miso_pin)) {
        gpio_init(spi_config[bus].miso_pin, GPIO_IN);
        gpio_init_af(spi_config[bus].miso_pin, spi_config[bus].miso_af);
    }

    if (gpio_is_valid(spi_config[bus].sclk_pin)) {
        gpio_init(spi_config[bus].sclk_pin, GPIO_OUT);
        gpio_init_af(spi_config[bus].sclk_pin, spi_config[bus].sclk_af);
    }
#endif
    mutex_unlock(&locks[bus]);
}

void spi_deinit_pins(spi_t bus) {
    assume(bus < SPI_NUMOF);
    mutex_lock(&locks[bus]);

    if (gpio_is_valid(spi_config[bus].sclk_pin)) {
        gpio_init(spi_config[bus].sclk_pin, GPIO_IN);
    }

    if (gpio_is_valid(spi_config[bus].mosi_pin)) {
        gpio_init(spi_config[bus].mosi_pin, GPIO_IN);
    }

    if (gpio_is_valid(spi_config[bus].miso_pin)) {
        gpio_init(spi_config[bus].miso_pin, GPIO_IN);
    }
}

int spi_init_cs(spi_t bus, spi_cs_t cs) {
    if (bus >= SPI_NUMOF) {
        return SPI_NODEV;
    }
    if (!gpio_is_valid(cs) ||
        (((cs & SPI_HWCS_MASK) == SPI_HWCS_MASK) && (cs & ~(SPI_HWCS_MASK)))) {
        return SPI_NOCS;
    }

    if (cs == SPI_HWCS_MASK) {
        if (!gpio_is_valid(spi_config[bus].cs_pin)) {
            return SPI_NOCS;
        }
#ifdef CPU_FAM_STM32F1
        gpio_init_af(spi_config[bus].cs_pin, GPIO_AF_OUT_PP);
#else
        gpio_init(spi_config[bus].cs_pin, GPIO_OUT);
        gpio_init_af(spi_config[bus].cs_pin, spi_config[bus].cs_af);
#endif
    }
    else {
        gpio_init((gpio_t)cs, GPIO_OUT);
        gpio_set((gpio_t)cs);
    }

    return SPI_OK;
}

void spi_acquire(spi_t bus, spi_cs_t cs, spi_mode_t mode, spi_clk_t clk) {
    assume((unsigned)bus < SPI_NUMOF);

    // lock bus
    mutex_lock(&locks[bus]);
#ifdef STM32_PM_STOP
    // block STOP mode
    pm_block(STM32_PM_STOP);
#endif
    // enable SPI device clock
    periph_clk_en(spi_config[bus].apbbus, spi_config[bus].rccmask);
    // enable device
    if (clk != clocks[bus]) {
        prescalers[bus] = _get_prescaler(&spi_config[bus], clk);
        clocks[bus] = clk;
    }
    uint8_t br = prescalers[bus];

    DEBUG("[spi] acquire: requested clock: %" PRIu32
          " Hz, resulting clock: %" PRIu32 " Hz, BR prescaler: %u\n",
          clk,
          periph_apb_clk(spi_config[bus].apbbus) >> (br + 1),
          (unsigned)br);

#if CPU_FAM_STM32H7

    uint32_t cr1 = 0;
    if (cs != SPI_HWCS_MASK) {
        cr1 |= SPI_CR1_SSI;    // internal SS high when SSM=1
    }
    dev(bus)->CR1 = cr1;   // write SSI (do not set SPE yet)

    // Build CFG1
    uint32_t cfg1 = 0;
    cfg1 |= ((br << SPI_CFG1_MBR_Pos) & SPI_CFG1_MBR_Msk); // Set master baud rate
    cfg1 |= (SPI_CFG1_DSIZE_0 | SPI_CFG1_DSIZE_1 | SPI_CFG1_DSIZE_2); // DSIZE = 8-bit

    // Build CFG2 fully before any write
    uint32_t cfg2 = 0;
    cfg2 |= SPI_CFG2_SSOM;
    if (cs != SPI_HWCS_MASK) {
        cfg2 |= SPI_CFG2_SSM; // software NSS management (use GPIO as CS)
    } else {
        // hardware CS: set SSOE so peripheral drives NSS
        cfg2 |= SPI_CFG2_SSOE;
    }
    switch (mode) {
        case SPI_MODE_0: cfg2 &= ~(SPI_CFG2_CPHA | SPI_CFG2_CPOL); break;
        case SPI_MODE_1: cfg2 = (cfg2 & ~SPI_CFG2_CPOL) | SPI_CFG2_CPHA; break;
        case SPI_MODE_2: cfg2 = (cfg2 & ~SPI_CFG2_CPHA) | SPI_CFG2_CPOL; break;
        case SPI_MODE_3: cfg2 |= SPI_CFG2_CPOL | SPI_CFG2_CPHA; break;
    }
    cfg2 |= SPI_CFG2_MASTER; // Master Mode
    // Write CFG1 and CFG2
    dev(bus)->CFG1 = cfg1;
    dev(bus)->CFG2 = cfg2;

#  ifdef MODULE_PERIPH_DMA
    if (_use_dma(&spi_config[bus])) {
        dev(bus)->CFG1 |= SPI_CFG1_RXDMAEN | SPI_CFG1_TXDMAEN;
        dma_acquire(spi_config[bus].tx_dma);
        dma_acquire(spi_config[bus].rx_dma);
    }
#  endif
#else
    uint16_t cr1 = ((br << BR_SHIFT) | mode | SPI_CR1_MSTR | SPI_CR1_SPE);
    // Settings to add to CR2 in addition to SPI_CR2_SETTINGS
    uint16_t cr2 = SPI_CR2_SETTINGS;
    if (cs != SPI_HWCS_MASK) {
        cr1 |= (SPI_CR1_SSM | SPI_CR1_SSI);
    }
    else {
        cr2 = (SPI_CR2_SSOE);
    }

#  ifdef MODULE_PERIPH_DMA
    if (_use_dma(&spi_config[bus])) {
        cr2 |= SPI_CR2_TXDMAEN | SPI_CR2_RXDMAEN;

        dma_acquire(spi_config[bus].tx_dma);
        dma_setup(spi_config[bus].tx_dma,
                  spi_config[bus].tx_dma_chan,
                  (uint32_t*)&(dev(bus)->DR),
                  DMA_MEM_TO_PERIPH,
                  DMA_DATA_WIDTH_BYTE,
                  0);

        dma_acquire(spi_config[bus].rx_dma);
        dma_setup(spi_config[bus].rx_dma,
                  spi_config[bus].rx_dma_chan,
                  (uint32_t*)&(dev(bus)->DR),
                  DMA_PERIPH_TO_MEM,
                  DMA_DATA_WIDTH_BYTE,
                  0);
    }
#  endif
    dev(bus)->CR1 = cr1;
    dev(bus)->CR2 = cr2;
#endif
}

void spi_release(spi_t bus) {
#ifdef MODULE_PERIPH_DMA
    if (_use_dma(&spi_config[bus])) {
        dma_release(spi_config[bus].tx_dma);
        dma_release(spi_config[bus].rx_dma);
    }
#endif
    // disable device and release lock
    dev(bus)->CR1 = 0;
    dev(bus)->CR2 = SPI_CR2_SETTINGS; // Clear the DMA and SSOE flags
#if CPU_FAM_STM32H7
    dev(bus)->CFG1 = 0;
    dev(bus)->CFG2 = 0;
#endif
    periph_clk_dis(spi_config[bus].apbbus, spi_config[bus].rccmask);
#ifdef STM32_PM_STOP
    // unblock STOP mode
    pm_unblock(STM32_PM_STOP);
#endif
    mutex_unlock(&locks[bus]);
}

void spi_transfer_bytes(spi_t bus, spi_cs_t cs, bool cont,
                        const void *out, void *in, size_t len) {
    // make sure at least one input or one output buffer is given
    assume(out || in);

    // active the given chip select line
    if ((cs != SPI_HWCS_MASK) && gpio_is_valid(cs)) {
        gpio_clear((gpio_t)cs);
    }
    else {
#if CPU_FAM_STM32H7
        dev(bus)->CFG2 |= SPI_CFG2_SSOE;
#else
        dev(bus)->CR2 |= SPI_CR2_SSOE;
#endif
    }

#ifdef MODULE_PERIPH_DMA
    if (_use_dma(&spi_config[bus]) && len > CONFIG_SPI_DMA_THRESHOLD_BYTES) {
        _transfer_dma(bus, out, in, len);
    }
    else {
#endif
        _transfer_no_dma(bus, out, in, len);
#ifdef MODULE_PERIPH_DMA
    }
#endif

    // release the chip select if not specified differently
    if ((!cont) && gpio_is_valid(cs)) {
        if (cs != SPI_HWCS_MASK) {
            gpio_set((gpio_t)cs);
        }
        else {
#if CPU_FAM_STM32H7
            dev(bus)->CFG2 &= ~(SPI_CFG2_SSOE);
#else
            dev(bus)->CR2 &= ~(SPI_CR2_SSOE);
#endif
        }
    }
}
